# netclab-examples

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
manifests/components/csr/csr01/: csr01-day0.yaml  csr01-image.yaml  csr01-svc.yaml  csr01.yaml  kustomization.yaml
manifests/components/csr/csr02/: csr02-day0.yaml  csr02-image.yaml  csr02-svc.yaml  csr02.yaml  kustomization.yaml
manifests/components/ixia-c/: controller-cm.yaml  engine-1.yaml  engine-2-svc.yaml  kustomization.yaml
manifests/components/ixia-c/controller/: kustomization.yaml
manifests/components/ixia-c/engine-1/: engine-1-svc.yaml  engine-1.yaml  kustomization.yaml
manifests/components/ixia-c/engine-2/: engine-2.yaml  kustomization.yaml
manifests/components/ixia-c/engine-3/: engine-3.yaml  kustomization.yaml
manifests/components/networks/: bridges.yaml  kustomization.yaml  networks.yaml
manifests/components/networks/b0/: b0.yaml  kustomization.yaml
manifests/components/networks/b1/: b1.yaml  kustomization.yaml
manifests/components/networks/b2/: b2.yaml  kustomization.yaml
manifests/components/networks/b3/: b3.yaml  kustomization.yaml
manifests/components/networks/b4/: b4.yaml  kustomization.yaml
manifests/components/networks/p1/: kustomization.yaml  p1.yaml
manifests/components/networks/p2/: kustomization.yaml  p2.yaml
manifests/components/networks/p3/: kustomization.yaml  p3.yaml
manifests/components/networks/p4/: kustomization.yaml  p4.yaml
manifests/components/networks/p5/: kustomization.yaml  p5.yaml
manifests/components/networks/p6/: kustomization.yaml  p6.yaml
manifests/components/srlinux/: hw.yaml  kustomization.yaml  srl03.yaml  srl04.yaml
manifests/components/srlinux/srl01/: hw.yaml  kustomization.yaml  srl01.yaml
manifests/components/srlinux/srl02/: hw.yaml  kustomization.yaml  srl02.yaml
manifests/components/srlinux/srl03/: hw.yaml  kustomization.yaml
manifests/testbed-01/: kustomization.yaml
manifests/topo-00/: kustomization.yaml  topology.md
manifests/topo-01/: kustomization.yaml  topology.md
manifests/topo-02/: kustomization.yaml  topology.md
manifests/topo-03/: kustomization.yaml  topology.md
src/netclab-examples/tests/: conftest.py
src/netclab-examples/tests/basic/: test_otg_config.py
src/netclab-examples/tests/bgp/: _test_bgp.py  conftest.py  csr01_config.txt  otg01_config.yaml  test_bgp.py
src/netclab-examples/tests/csr/: conftest.py  test_csr.py
src/netclab-examples/tests/otg/: conftest.py  test_otg.py
src/netclab_examples/test_helpers/: csr.py  otg.py
src/network-tests/tests/: conftest.py
test_helpers/: k8s.py
tests/: conftest.py  requirements.txt
tests/b2b/: otg_b2b.yaml  test_otg_config.py
tests/bgp/: conftest.py
tests/bgp_on_csr/: conftest.py  otg_bgpv6.yaml  test_bgp.py
tests/csr/: conftest.py
tests/otg/: conftest.py
tests/srlinux/: README.md  conftest.py  otg_bgpv4.yaml  srl_bgpv4.cfg  test_bgp.py
tests/utils/: csr.py  otg.py
tools/: apply_delete_topology.sh  create_day0_iso.sh  expose_images.sh  generate_otg_config.py  install_otgen.sh  iosxe_config.txt  run_otgen.sh
topology_tools/: apply_delete_topology.sh  create_day0_iso.sh  expose_images.sh
(+41 files in other folders)
