[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "netclab_examples",
    "/manifests",
    "/tests",
    "/test_helpers",
]
exclude = [
    "_[a-zA-Z]*",
]
#packages = [
#    "src/netclab-examples",
#]
#[tool.hatch.build.targets.wheel.force-include]
#"tests" = "/"
#"test_helpers" = "/"


[project]
name = "netclab-examples"
version = "0.0.1"
description = "Network tests on netclab"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "mbakalarski at github" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]


dependencies = [
    "pytest>=8.3.4",
    "snappi>=1.19.1",
    "kubernetes>=31.0.0",
    "python-dotenv>=1.0.1",
    "pyats>=24.11",
    #"tests @ file:///tests",
    #"test_helpers @ file:///test_helpers",
]


[project.urls]
Homepage = "https://github.com/mbakalarski/netclab-examples"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpath = ["tests"]
pythonpath = [
    "test_helpers",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
