[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netclab-examples"
version = "0.0.1"
description = "Network tests on netclab"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "mbakalarski at github" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]


dependencies = [
    "pytest>=8.3.4",
    "snappi>=1.19.1",
    "kubernetes>=31.0.0",
    "python-dotenv>=1.0.1",
    "pyats>=24.11",
    "waiting>=1.5.0",
]


[project.urls]
Homepage = "https://github.com/mbakalarski/netclab-examples"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::urllib3.exceptions.InsecureRequestWarning",
]
markers = [
    "csrcfg: csr configuration file name",
    "otgcfg: otg configuration file name",
]
