[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project]
dynamic = ["dependencies"]
name = "netclab-examples"
version = "0.0.1"
description = "Network tests on netclab"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "mbakalarski at github" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]


[project.urls]
Homepage = "https://github.com/mbakalarski/netclab-examples"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::urllib3.exceptions.InsecureRequestWarning",
]
markers = [
    "csrcfg: csr configuration file name",
    "otgcfg: otg configuration file name",
    "topo_01: tests on topo-01",
    "topo_02: tests on topo-02",
]
